--- a/mini-app/src/i18n/locales/ru.json
+++ b/mini-app/src/i18n/locales/ru.json
@@ -152,5 +152,9 @@
     "unauthorized": "У вас нет прав для выполнения этого действия",
     "notFound": "Ресурс не найден",
     "serverError": "Ошибка сервера. Попробуйте позже."
+  },
+  "warnings": {
+    "botNotAdmin": "Бот не является администратором этого чата. Функции модерации не будут работать.",
+    "botNotAdminShort": "Бот не админ"
   }
 }
