--- a/mini-app/src/i18n/locales/ru.json
+++ b/mini-app/src/i18n/locales/ru.json
@@ -258,15 +258,9 @@
   },
   "adminLogs": {
     "title": "Логи действий админа",
-    "export": "Экспорт",
-    "recentActions": "Недавние действия",
-    "performedBy": "Выполнено",
-    "target": "Цель",
-    "noLogs": "Нет логов",
-    "noLogsDescription": "Действия админа не были залогированы для этого чата",
-    "previous": "Назад",
-    "next": "Вперед",
-    "pageInfo": "Страница {{current}} из {{total}}",
+    "export": "Экспортировать логи",
+    "exportHeader": "Экспорт логов админа",
+    "exportDescription": "Скачать JSON-файл со всеми действиями админа (предупреждения, баны, кики и т.д.) для этого чата.",
     "exportSuccess": "Логи успешно экспортированы",
     "exportFailed": "Не удалось экспортировать логи"
   },
